--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,45 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.input-wrapper{
+    margin: 10px;
+}
+.input-field{
+ width: 200px;
+ height: 30px;
+}
+.button {
+    width: 200px;
+    height: 30px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.container{
+    text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.button-link{
+    border: 0;
+    cursor: pointer;
+    background-color: transparent;
+    color: skyblue;
+    margin: 20px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.input-error{
+    position: absolute;
+    padding: 10px;
+    color: red;
+    font-size: 13px;
+}
+
+table, th , td{
+    border: 1px solid #000;
+    border-collapse: collapse;
+    padding: 10px;
+
+}
+
+table, td, button{
+    margin: 5px;
+}
+
+table img{
+    width: 80px;
 }
